===============================================================================
$Id$
$URL$
===============================================================================
New Checkin: mlevy
Date:        3 Dec 2012
Summary:     Removed T / U grid variables, improved ascii output (no trailing
             spaces at the end of lines)

Files Modified:
M       src/vmix_output.F90
M       src/shared/vmix_shear.F90
M       src/shared/vmix_kinds_and_types.F90
M       src/drivers/vmix_KPP-shear_driver.F90
===============================================================================
New Checkin: mlevy
Date:        3 Dec 2012
Summary:     Bug-fix in setup routine (prompted for netcdf/include twice)

Files Modified:
M       bld/setup
===============================================================================
New Checkin: mlevy
Date:        3 Dec 2012
Summary:     New output routines don't require storing Ri in z_iface for shear
             test.

Files Modified:
M       src/vmix_output.F90
M       src/drivers/vmix_KPP-shear_driver.F90
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Adding "clean" flag to reg_test scripts, only outputting one file
             for netCDF output of Bryan-Lewis tests.

Files Modified:
M       reg_tests/shear-KPP/Large_test.sh
M       reg_tests/Bryan-Lewis/BL_test.sh
M       src/drivers/vmix_BL_driver-pointers.F90
M       src/drivers/vmix_BL_driver-mem_copy.F90
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Bug-fix -- I didn't mean to hard-code in ncol_id=2 for output

Files Modified:
M       src/vmix_output.F90
===============================================================================
New Checkin: mlevy
Date:        2 Dec 2012
Summary:     Overhaul of the output routines, now all writing is done from one